--- a/.github/workflows/update-table.yml
+++ b/.github/workflows/update-table.yml
@@ -2,7 +2,7 @@ name: Update Table
 
 on:
   schedule:
-    - cron: "0 0 * * 0"  # Run every Sunday at midnight
+    - cron: "44 0 * * *"  # Run every Sunday at midnight
 
 jobs:
   update-table:
