--- a/.github/workflows/update-table.yml
+++ b/.github/workflows/update-table.yml
@@ -18,6 +18,6 @@ jobs:
 
     - name: Run Python script
       run: |
-        python update_table.py
+        python script.py
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
